--- a/history/hinduism/philosophy.html
+++ b/history/hinduism/philosophy.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-09-09 Tue 20:26 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The early development of Indian philosophy ✅</title>
@@ -212,6 +212,7 @@
 <li><a href="#orga5ddecd">5. Classical period (100 BC&#x2014;500)</a></li>
 <li><a href="#org553912c">6. Reformation period (500&#x2014;1500)</a></li>
 <li><a href="#org079e1a2">7. TL;DR</a></li>
+<li><a href="#org85d7afb">8. Misc</a></li>
 </ul>
 </div>
 </div>
@@ -302,14 +303,14 @@ A classification I will use, that is idiosyncratic to me, but which reflects the
 <tbody>
 <tr>
 <td class="org-left"><b>Āstika</b></td>
-<td class="org-left">Sāṃkhya&#x2014;Yoga Nyāya&#x2014;Vaiśeṣika Mīmāṃsā&#x2014;Vedānta</td>
+<td class="org-left">Sāṃkhya-Yoga; Nyāya-Vaiśeṣika; Mīmāṃsā-Vedānta</td>
 <td class="org-left">Bauddha Jaina</td>
 </tr>
 
 <tr>
 <td class="org-left"><b>Nāstika</b></td>
 <td class="org-left">Cārvāka</td>
-<td class="org-left">Ajñāna Ājīvika&#x2014;Akriyā&#x2014;Śāśvata</td>
+<td class="org-left">Ajñāna; Ājīvika-Akriyā-Śāśvata</td>
 </tr>
 </tbody>
 </table>
@@ -441,7 +442,7 @@ With regards to the first, the notable reformations are:
 </ul>
 
 <p>
-The logical expositions of the Mīmāṃsā school are also worthy of note for their contributions to the philosophy of language, e.g. Bhartr̥hari (5th cen), Prabhākara (6th cen), Kumārila Bhaṭṭa (c. 700). Also worth a mention are the epic compositions of Vidyāraṇya (the Sarvadarśanasaṅgraha) and Vācaspati Miśra summarizing and comparing the works of various schools.
+The logical expositions of the Mīmāṃsā school are also worthy of note for their contributions to the philosophy of language, e.g. Bhartr̥hari (5th cen), Prabhākara (6th cen), Kumārila Bhaṭṭa (c. 700). Also worth a mention are the epic compositions of Vidyāraṇya (the Sarvadarśanasaṅgraha) and Vācaspati Miśra summarizing and comparing the works of various schools.
 </p>
 
 <p>
@@ -469,10 +470,53 @@ Having something to obsess about (religion) and a source of competition (debate)
 </p>
 </div>
 </div>
+<div id="outline-container-org85d7afb" class="outline-2">
+<h2 id="org85d7afb"><span class="section-number-2">8.</span> Misc</h2>
+<div class="outline-text-2" id="text-8">
+<p>
+Some interesting additions from a u/Longjumping<sub>Ad</sub><sub>186</sub> on <a href="https://www.reddit.com/r/IndianHistory/comments/16gpxl7/comment/k0a4k78/">reddit</a>:
+</p>
+
+<blockquote>
+<p>
+Thank you for the detailed write-up, though I would like to add a few points and some specific questions I had. Firstly, we do have a major text of the Charvaka school, specifically, it&rsquo;s a later branch of the school and the only one with a surviving text. I am referring to the Tattvopaplasimha of Jayarasi Bhatta, which serves as a major text that provides some insight into the Charvaka.
+</p>
+
+<p>
+Outside of this specific point, I have come across a secondary way of categorizing the period of Indian philosophy around major figures that shaped each period. For example, there was a period called quietism which is defined by the rise of madhyamaka of Nagarjuna that disagreed with the use of absolute statements. Another period would be the time around the early 9th century which saw the rise of Jayarasi&rsquo;s philosophy that brought in a new age of philosophy skepticism. The last figure that comes into mind would be Sri-Harsa (who didn&rsquo;t specify his school, but scholars say he is a member of the Advaita tradition).
+</p>
+
+<p>
+In addition to this point, I would elaborate on a few changes that happened during the later periods. The Navya Nyaya was formed by the unification of the Vaseishika and the original Nyaya school by Gangesa. This was mainly possible because the Nyaya schools borrowed a significant portion of their metaphysics from Vaishesika, who in turn borrowed the Nyaya epistemology. Additionally, the Navya-Nyaya did have a schism during the later period under Raghunatha Siromani, who more new age came in conflict with the traditionalist view and held some of the members closer to Gangesa&rsquo;s perspective.
+</p>
+
+<p>
+Honestly, I am somewhat sad in the sense that you missed out on some of the more interesting philosophers of the post-classical period (6th Century to 12th Century). The main one would be the father of the Trika: Abhinavagupta, who was one of the most fascinating and well-educated individuals. I mean he wrote massive works of philosophy, linguistics, aesthetics (which was a major contribution), and theology. Furthermore, you missed some of the key philosophers of Buddhism: Dignaga (logician), Santideva (Madhyamaka), Vasubandhu, and Asanga (Both led to the formation of the Yogacara system during the Gupta period). There are a few missing Jain philosophers like Kunda Kunda (Digambara) and Umaswati (from the pre-sectarian schism of Jainism) who laid some of the epistemological and metaphysical foundations of the Jaina sect.
+</p>
+
+<p>
+Lastly, I just have a few questions/issues: I am not sure if Bhatrhari was Mimamsa considering people have argued that he was a Buddhist or part of the yogic tradition. Furthermore, you kind of forgot to mention the tantrism and the influence it held over the main philosophical atmosphere during the late classical to middle post-classical period. One last point, I don&rsquo;t think yoga was a school of the majority of the early period, rather it was a set of practices that developed out of Samkhya and general Tantric ideas. It only reached its final form as a complete school during the early Mughal period.
+</p>
+
+<p>
+Sorry, if I come across as being somewhat critical. Honestly, I am kind of happy to see some discussion of Indian philosophy which barely happens in the online space. Most of the time people say it is mystical or religious, especially when it comes to the later schools that developed after the post-classical period (12th century or more) due to their affiliations with theism. Those schools have their merit and it&rsquo;s deeply saddening to know that they are thoroughly understudied despite the value the the present.
+It is good to know that this debate happens somewhere.
+</p>
+</blockquote>
+
+<p>
+And responses from me therein:
+</p>
+<ul class="org-ul">
+<li>I don&rsquo;t think [your definition of navya-nyāya] is correct. I&rsquo;m not clear on what exactly differentiated Navya-Nyāya, but there were syncretic Nyāya-Vaiśeṣika works before Gaṅgeśa: e.g. the works of Varadarāja and Keśava Miśra.</li>
+<li>Bhartr̥hari was certainly not a Buddhist or a Yogic: he begins his work by discussing Brahman and positioning itself as part of the Vedāṅga. I&rsquo;d say Vedāṅga as a whole was the domain of the Mīmāṃsā school.</li>
+</ul>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-09-09 Tue 20:26</p>
 </div>
 </body>
 </html>
