--- a/other-people/takes.html
+++ b/other-people/takes.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-27 Wed 20:55 -->
+<!-- 2025-09-09 Tue 20:26 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Favorite tweets by others</title>
@@ -208,19 +208,20 @@
 <li><a href="#orgb763605">1. Shashank</a>
 <ul>
 <li><a href="#org61a3ecf">1.1. cathedral</a></li>
-<li><a href="#org0c6d7f5">1.2. understanding things instinctively</a></li>
-<li><a href="#org6a12501">1.3. moral ideologues vs mercenaries</a></li>
-<li><a href="#org38f7e56">1.4. understanding a totalizing social movement</a></li>
-<li><a href="#orgca794a1">1.5. using power</a></li>
-<li><a href="#org019208f">1.6. literary/oral tradition</a></li>
-<li><a href="#org28c0f07">1.7. foreign policy</a></li>
-<li><a href="#org28ff3a4">1.8. retreating</a></li>
-<li><a href="#org99610a7">1.9. adopting enemy framework</a></li>
-<li><a href="#orgff3e69b">1.10. focusing on the left</a></li>
-<li><a href="#org3ad9a3d">1.11. you dare recite the atrocity literature to me?</a></li>
-<li><a href="#org22c6921">1.12. shantipoorvak</a></li>
-<li><a href="#org45b8a7c">1.13. election analysis</a></li>
-<li><a href="#org469d282">1.14. religion historically</a></li>
+<li><a href="#orgc5884a3">1.2. regime-completeness</a></li>
+<li><a href="#org0c6d7f5">1.3. understanding things instinctively</a></li>
+<li><a href="#org6a12501">1.4. moral ideologues vs mercenaries</a></li>
+<li><a href="#org38f7e56">1.5. understanding a totalizing social movement</a></li>
+<li><a href="#orgca794a1">1.6. using power</a></li>
+<li><a href="#org019208f">1.7. literary/oral tradition</a></li>
+<li><a href="#org28c0f07">1.8. foreign policy</a></li>
+<li><a href="#org28ff3a4">1.9. retreating</a></li>
+<li><a href="#org99610a7">1.10. adopting enemy framework</a></li>
+<li><a href="#orgff3e69b">1.11. focusing on the left</a></li>
+<li><a href="#org3ad9a3d">1.12. you dare recite the atrocity literature to me?</a></li>
+<li><a href="#org22c6921">1.13. shantipoorvak</a></li>
+<li><a href="#org45b8a7c">1.14. election analysis</a></li>
+<li><a href="#org469d282">1.15. religion historically</a></li>
 </ul>
 </li>
 <li><a href="#org3ae9386">2. Akshay VAK</a>
@@ -305,9 +306,27 @@ It has managed to combine the flexibility of &rsquo;anarchic&rsquo; social organ
 </p>
 </div>
 </div>
-<div id="outline-container-org0c6d7f5" class="outline-3">
-<h3 id="org0c6d7f5"><span class="section-number-3">1.2.</span> understanding things instinctively</h3>
+<div id="outline-container-orgc5884a3" class="outline-3">
+<h3 id="orgc5884a3"><span class="section-number-3">1.2.</span> regime-completeness</h3>
 <div class="outline-text-3" id="text-1-2">
+<p>
+<p class="byline">Also published on <a href="https://x.com/ShazCoder/status/1964798518197162272">Twitter</a></p>
+[on foreign policy] Yes - it&rsquo;s one of what I call &ldquo;regime complete problems&rdquo;.
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/ShazCoder/status/1944758343186501714">Twitter</a></p>
+A lot more problems were &ldquo;regime complete&rdquo; ones than I had thought.
+</p>
+
+<p>
+Also, political economy is downstream from regimes that rule society and economic policy planks in isolation is overrated.
+</p>
+</div>
+</div>
+<div id="outline-container-org0c6d7f5" class="outline-3">
+<h3 id="org0c6d7f5"><span class="section-number-3">1.3.</span> understanding things instinctively</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1647963657685352449">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 In competitive democracies, factions with the understanding of great importance  of unsaid views and instinctive sense to co-ordinate with other &ldquo;party&rdquo; members without any instruction from top or formal organizations wins. Specific groups and movements are extraordinary in this.
@@ -324,8 +343,8 @@ And they don&rsquo;t have these retarded &ldquo;debates&rdquo; because their peo
 </div>
 </div>
 <div id="outline-container-org6a12501" class="outline-3">
-<h3 id="org6a12501"><span class="section-number-3">1.3.</span> moral ideologues vs mercenaries</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="org6a12501"><span class="section-number-3">1.4.</span> moral ideologues vs mercenaries</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1750807107132395748">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 It is funny that nationalists from India to Pakistan to China to even the Gulf rulers all make the same category error.
@@ -341,8 +360,8 @@ Even the people in these spheres who are morally weaker or are desperate enough 
 </div>
 </div>
 <div id="outline-container-org38f7e56" class="outline-3">
-<h3 id="org38f7e56"><span class="section-number-3">1.4.</span> understanding a totalizing social movement</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="org38f7e56"><span class="section-number-3">1.5.</span> understanding a totalizing social movement</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1575086272216866816">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 It is under-rated how much poor theory was responsible for failure of right-libertarianism of 2000s. The rhetoric imagined a sultanistic regime which does not exist in West. The state/private distinction is inadequate when dealing with total social-cultural-political movement.
@@ -363,8 +382,8 @@ Another take on realism/IR discourse - you cannot really run an &ldquo;apolitica
 </div>
 </div>
 <div id="outline-container-orgca794a1" class="outline-3">
-<h3 id="orgca794a1"><span class="section-number-3">1.5.</span> using power</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="orgca794a1"><span class="section-number-3">1.6.</span> using power</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1796491036652601721">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 Conservatives <b>loved</b> to pose as the hard nosed realists who tells the naive but well meaning liberals with their heads in the sky some difficult truths about the real world.
@@ -381,8 +400,8 @@ It is fine but it should be a part of broader strategy - discredit, delegitimize
 </div>
 </div>
 <div id="outline-container-org019208f" class="outline-3">
-<h3 id="org019208f"><span class="section-number-3">1.6.</span> literary/oral tradition</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="org019208f"><span class="section-number-3">1.7.</span> literary/oral tradition</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1943302085799514301">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 Politically cohesive communities who care deeply about their issues and have a robust literary and oral traditon transmitting the knowledge from generation to generation reproducing themselves <b>as a community</b> tend to win long term unless confronted by a stronger enemy.
@@ -390,8 +409,8 @@ Politically cohesive communities who care deeply about their issues and have a r
 </div>
 </div>
 <div id="outline-container-org28c0f07" class="outline-3">
-<h3 id="org28c0f07"><span class="section-number-3">1.7.</span> foreign policy</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="org28c0f07"><span class="section-number-3">1.8.</span> foreign policy</h3>
+<div class="outline-text-3" id="text-1-8">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1705532283728404672">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 A key difference -
@@ -439,8 +458,8 @@ One of my controversial opinion is it is now becoming increasingly untenable to 
 </div>
 </div>
 <div id="outline-container-org28ff3a4" class="outline-3">
-<h3 id="org28ff3a4"><span class="section-number-3">1.8.</span> retreating</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="org28ff3a4"><span class="section-number-3">1.9.</span> retreating</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1938018853247754653">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 American conservatives have been running the Maoist film in reverse for decades. 
@@ -456,8 +475,8 @@ Voluntarily choosing to become dhimmis.
 </div>
 </div>
 <div id="outline-container-org99610a7" class="outline-3">
-<h3 id="org99610a7"><span class="section-number-3">1.9.</span> adopting enemy framework</h3>
-<div class="outline-text-3" id="text-1-9">
+<h3 id="org99610a7"><span class="section-number-3">1.10.</span> adopting enemy framework</h3>
+<div class="outline-text-3" id="text-1-10">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1453065522464034820">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 Right wingers stop attacking other countries&rsquo; right wingers by using progressive framework challenge (impossible).
@@ -486,8 +505,8 @@ Retards - Yes, Hindutva is feminist longhouse. Convert to Abrahamic religions.
 </div>
 </div>
 <div id="outline-container-orgff3e69b" class="outline-3">
-<h3 id="orgff3e69b"><span class="section-number-3">1.10.</span> focusing on the left</h3>
-<div class="outline-text-3" id="text-1-10">
+<h3 id="orgff3e69b"><span class="section-number-3">1.11.</span> focusing on the left</h3>
+<div class="outline-text-3" id="text-1-11">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1786414924253610291">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 The right wing recognizes it&rsquo;s ideological brethren far better than an alien faction and movements. 
@@ -503,8 +522,8 @@ Race memes on X are easier to grasp.
 </div>
 </div>
 <div id="outline-container-org3ad9a3d" class="outline-3">
-<h3 id="org3ad9a3d"><span class="section-number-3">1.11.</span> you dare recite the atrocity literature to me?</h3>
-<div class="outline-text-3" id="text-1-11">
+<h3 id="org3ad9a3d"><span class="section-number-3">1.12.</span> you dare recite the atrocity literature to me?</h3>
+<div class="outline-text-3" id="text-1-12">
 <p>
 <p class="byline">Also published on <a href="https://x.com/ShazCoder/status/1646502908559515648">Twitter</a></p>
 It is very funny when right-wingers/third-world nationalists try to own Westoids by using their state ideology/foundational mythos. 
@@ -520,8 +539,8 @@ It is like trying to own Bolsheviks by invoking the Tsarist empire. Dude, they k
 </div>
 </div>
 <div id="outline-container-org22c6921" class="outline-3">
-<h3 id="org22c6921"><span class="section-number-3">1.12.</span> shantipoorvak</h3>
-<div class="outline-text-3" id="text-1-12">
+<h3 id="org22c6921"><span class="section-number-3">1.13.</span> shantipoorvak</h3>
+<div class="outline-text-3" id="text-1-13">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1941858176090898669">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 Funnily the online Indian RW engages in the same behavior but 10x worse while the union government here shows both groups how to actually do it (shantipoorvak, being extremely patient, not lashing out at random slights, keep eye on big picture, moving ahead slowly but surely).
@@ -529,8 +548,8 @@ Funnily the online Indian RW engages in the same behavior but 10x worse while th
 </div>
 </div>
 <div id="outline-container-org45b8a7c" class="outline-3">
-<h3 id="org45b8a7c"><span class="section-number-3">1.13.</span> election analysis</h3>
-<div class="outline-text-3" id="text-1-13">
+<h3 id="org45b8a7c"><span class="section-number-3">1.14.</span> election analysis</h3>
+<div class="outline-text-3" id="text-1-14">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1803103358175080462">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 Most of Indian political analysis is completely data free. Not only that but even post-election analysis is based largely on vibes and brain dead cliches.
@@ -538,8 +557,8 @@ Most of Indian political analysis is completely data free. Not only that but eve
 </div>
 </div>
 <div id="outline-container-org469d282" class="outline-3">
-<h3 id="org469d282"><span class="section-number-3">1.14.</span> religion historically</h3>
-<div class="outline-text-3" id="text-1-14">
+<h3 id="org469d282"><span class="section-number-3">1.15.</span> religion historically</h3>
+<div class="outline-text-3" id="text-1-15">
 <p>
 <p class="byline">Published on <a href="https://x.com/ShazCoder/status/1899732633262940271">Twitter</a> by <a href="https://x.com/ShazCoder">@ShazCoder</a></p>
 One consequence of secularism is people consider &ldquo;religion&rdquo; to be a category that exists separately from a system of general morality whereas in the past it was considered to be <b>the</b> truth given by God himself.
@@ -1157,7 +1176,7 @@ those who thought he was naive and stupid should know he is now most frustrated,
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-27 Wed 20:55</p>
+<p class="date">Created: 2025-09-09 Tue 20:26</p>
 </div>
 </body>
 </html>
