--- a/politics/leli-raj/misc.html
+++ b/politics/leli-raj/misc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-09-09 Tue 20:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Misc points</title>
@@ -216,6 +216,7 @@
 </li>
 <li><a href="#org24cc06d">5. Fukubatataism vs NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought</a></li>
 <li><a href="#org60afc93">6. America&rsquo;s boon</a></li>
+<li><a href="#orgbfb5de5">7. And the Americorps, where are they now?</a></li>
 </ul>
 </div>
 </div>
@@ -350,10 +351,23 @@ Then jokers had to come in and do big-braining and ruin everything. Muh National
 </p>
 </div>
 </div>
+<div id="outline-container-orgbfb5de5" class="outline-2">
+<h2 id="orgbfb5de5"><span class="section-number-2">7.</span> And the Americorps, where are they now?</h2>
+<div class="outline-text-2" id="text-7">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1965135905611710917">Twitter</a></p>
+The tariffs should put an end to the &ldquo;Americorps control everything&rdquo; meme.
+</p>
+
+<p>
+The only players in this game are ideologies. MAGA does stupid things, LeLis let them do it to watch them crash and burn, and a small faction of principled conservatives sue to stop it.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-09-09 Tue 20:27</p>
 </div>
 </body>
 </html>
