--- a/politics/policy.html
+++ b/politics/policy.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-06 Sat 15:06 -->
+<!-- 2025-09-09 Tue 20:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Private military corporations, the Order of Glorious Motherhood and other policies I wish for</title>
@@ -220,6 +220,7 @@
 <li><a href="#orgee3bdad">3.3. solutions</a></li>
 <li><a href="#orgd2b8d4f">3.4. tax rebates</a></li>
 <li><a href="#orge8122ce">3.5. why</a></li>
+<li><a href="#org6dafc43">3.6. cultural aversion</a></li>
 </ul>
 </li>
 <li><a href="#orgdf9a2f1">4. Low-hanging fruits in education</a>
@@ -427,6 +428,23 @@ Fertility-based income tax rebates would actually work wonders in India because 
 <li>Ageing population is a fiscal disaster</li>
 <li>India&rsquo;s pop dens is lower than e.g. England, Korea</li>
 <li>Expanding our tribe is good, and a religious obligation</li>
+</ol>
+</div>
+</div>
+<div id="outline-container-org6dafc43" class="outline-3">
+<h3 id="org6dafc43"><span class="section-number-3">3.6.</span> cultural aversion</h3>
+<div class="outline-text-3" id="text-3-6">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1965543185850982802">Twitter</a></p>
+Low TFR, at least in India, is caused not by any socio-economic factors but by a cultural attitude that having more kids = low-class.
+</p>
+
+<p>
+The reason for this is
+</p>
+<ol class="org-ol">
+<li>anti-natalist propaganda</li>
+<li>&ldquo;abandoning the impure instead of reclaiming it&rdquo; mindset (people find muslims repulsive so we try to act the opposite as they do in everything, even though some of the things they do, like having lots of children, is just about winning)</li>
 </ol>
 </div>
 </div>
@@ -648,7 +666,7 @@ You wake up every day to post-rain clarity and deciduous trees covered in dew.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-06 Sat 15:06</p>
+<p class="date">Created: 2025-09-09 Tue 20:27</p>
 </div>
 </body>
 </html>
