--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-09 Tue 20:27 -->
+<!-- 2025-09-11 Thu 03:12 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</title>
@@ -235,7 +235,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <li><a href="history/vikramaditya.html">Vikramaditya; reconstructing the interregnum of 57 BC &#x2013; 78 AD</a></li>
 <li>foreign
 <ul class="org-ul">
-<li><a href="history/foreign/axial.html">Early Iron Age Indian influences on the Middle-East</a></li>
+<li><a href="history/foreign/axial.html">Early Iron Age Indian influences on the Middle-East ⭐</a></li>
 <li><a href="history/foreign/sanudasa.html">Sānudāsa</a></li>
 <li><a href="history/foreign/suvarnabhumi.html">Suvarṇabhūmī</a></li>
 <li><a href="history/foreign/silkrd.html">The Sanskritization of the Silk Road 🏗️</a></li>
@@ -244,9 +244,9 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <ul class="org-ul">
 <li><a href="history/hinduism/caste.html">Caste</a></li>
 <li><a href="history/hinduism/theology.html">Early Vedic society and theological developments 🏗️</a></li>
-<li><a href="history/hinduism/restraint.html">Indriyajaya, environmentalism, the trad fallacy and adapting Hinduism for modernity</a></li>
-<li><a href="history/hinduism/tolerance.html">Is Hinduism tolerant? Is it Nihilistic?</a></li>
-<li><a href="history/hinduism/philosophy.html">The early development of Indian philosophy ✅</a></li>
+<li><a href="history/hinduism/restraint.html">Indriyajaya, environmentalism, the trad fallacy and adapting Hinduism for modernity ⭐</a></li>
+<li><a href="history/hinduism/tolerance.html">Is Hinduism tolerant? Is it Nihilistic? ⭐</a></li>
+<li><a href="history/hinduism/philosophy.html">The early development of Indian philosophy ⭐</a></li>
 <li><a href="history/hinduism/identities.html">Traditional names for India and Hinduism</a></li>
 </ul></li>
 <li>sources
@@ -416,7 +416,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-09 Tue 20:27</p>
+<p class="date">Created: 2025-09-11 Thu 03:12</p>
 </div>
 </body>
 </html>
