--- a/politics/rhetorical-advice/misc.html
+++ b/politics/rhetorical-advice/misc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-27 Wed 22:24 -->
+<!-- 2025-09-11 Thu 03:12 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Misc advice on rhetoric and arguing ⭐</title>
@@ -247,6 +247,34 @@ An important thing to realize about propaganda is that people (both enemies and 
 
 <p>
 Dwell on the implications of this for a minute.
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1964894210449957228">Twitter</a></p>
+</p>
+
+<p>
+Do you see what&rsquo;s going on?
+</p>
+
+<p>
+The whole Javed Akhtar &ldquo;debate&rdquo; is an example of leftist kayfabe. The point of it is to have both sides accept a common premise that &ldquo;Muslims are oppressed&rdquo;, so as to reinforce that consensus.
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1965840058365202614">Twitter</a></p>
+</p>
+
+<p>
+The way to think of it is: assuming leftist frameworks in your argument generates &ldquo;intellectual debt&rdquo;. May address the direct threat in front of you but affirms the assumptions (because, like I keep saying: more than the point you make explicitly, people are convinced by what you assume implicitly).
+</p>
+
+<p>
+The one correct way to do it is to cite things that are in your enemy&rsquo;s frameworks but not fundamental to them, but actually are important to you. Think e.g. Buddha citing non-fundamental things in H literature to accuse Brāhmaṇas of hypocrisy, e.g. &ldquo;Brāhmaṇas should not take usury, but they do!&rdquo;
+</p>
+
+<p>
+Similarly it is good to attack Muslim supremacy or frame Left-liberalism as a colonial empire, because these actually are problems, and the left really doesn&rsquo;t want to apply those principles in these cases.
 </p>
 </div>
 </div>
@@ -671,7 +699,7 @@ What is necessary is a calculated willingness to sacrifice virtues for a greater
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-27 Wed 22:24</p>
+<p class="date">Created: 2025-09-11 Thu 03:12</p>
 </div>
 </body>
 </html>
