--- a/politics/timepass.html
+++ b/politics/timepass.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-06 Sat 15:06 -->
+<!-- 2025-09-11 Thu 03:12 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Timepass</title>
@@ -250,8 +250,9 @@
 <li><a href="#org3ed5dc1">11. Optimal Robot</a></li>
 <li><a href="#orga4a4bce">12. Sanjay Gandhi</a></li>
 <li><a href="#org5ed7e0c">13. WAR game</a></li>
-<li><a href="#org58dd7c7">14. Is it because &#x2026;</a></li>
-<li><a href="#orgfd33e31">15. never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought</a></li>
+<li><a href="#org035e166">14. exceptional</a></li>
+<li><a href="#org58dd7c7">15. Is it because &#x2026;</a></li>
+<li><a href="#orgfd33e31">16. never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought</a></li>
 </ul>
 </div>
 </div>
@@ -500,7 +501,7 @@ Israel is TempleOS. God&rsquo;s temple is finished. Now, God kills CIA until it 
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1829753986943238421">Twitter</a></p>
 </p>
 
-<pre class="example" id="org255a01a">
+<pre class="example" id="orgd364f59">
 &gt; originate in Maharashtra
 &gt; immediately gain some Southern holdings
 &gt; Prosperity &amp; Hindoo unity
@@ -558,9 +559,18 @@ A player with a Pakistan flag spawning in the Indus valley spent his entire time
 </p>
 </div>
 </div>
-<div id="outline-container-org58dd7c7" class="outline-2">
-<h2 id="org58dd7c7"><span class="section-number-2">14.</span> Is it because &#x2026;</h2>
+<div id="outline-container-org035e166" class="outline-2">
+<h2 id="org035e166"><span class="section-number-2">14.</span> exceptional</h2>
 <div class="outline-text-2" id="text-14">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1965997480228892992">Twitter</a></p>
+They say I&rsquo;m exceptional, some people say the most exceptional, they see it they say &ldquo;sir it keeps striking and striking but we will never be tired of it&rdquo;. But no, says NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar), you will be tired of getting struck by my exceptionalism.
+</p>
+</div>
+</div>
+<div id="outline-container-org58dd7c7" class="outline-2">
+<h2 id="org58dd7c7"><span class="section-number-2">15.</span> Is it because &#x2026;</h2>
+<div class="outline-text-2" id="text-15">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1938880809483866442">Twitter</a></p>
 Why does German not sound funny like Dutch? Is it because they did the holocaust?
@@ -605,8 +615,8 @@ is it because they yearn for the kitchen
 </div>
 </div>
 <div id="outline-container-orgfd33e31" class="outline-2">
-<h2 id="orgfd33e31"><span class="section-number-2">15.</span> never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought</h2>
-<div class="outline-text-2" id="text-15">
+<h2 id="orgfd33e31"><span class="section-number-2">16.</span> never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought</h2>
+<div class="outline-text-2" id="text-16">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1922701558078201996">Twitter</a></p>
 Never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought.
@@ -846,7 +856,7 @@ If Emperor Napoleon can get up to vote for Trump then so can you.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-06 Sat 15:06</p>
+<p class="date">Created: 2025-09-11 Thu 03:12</p>
 </div>
 </body>
 </html>
